--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -78,8 +78,9 @@
               <button class="searchButton">
                 <i class="fas fa-search"></i>
               </button>
-              <!-- <div
-                class="dropdown-menu"
+              <div
+                class="dropdown-menu px-3"
+                id="dropdown-menu"
                 *ngIf="showDropdown"
                 [class.show]="showDropdown"
               >
@@ -98,7 +99,7 @@
                     <p *ngIf="!item.price">£161.63 - £202.04</p>
                   </div>
                 </div>
-              </div> -->
+              </div>
             </div>
           </li>
         </ul>
