--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -119,22 +119,22 @@ li a {
     padding: 0 6px;
   }
 }
-//search
-// .deal-img {
-//   max-width: 100%;
-//   max-height: 100%;
-//   object-fit: contain;
-// }
-// .deal * {
-//   font-size: 12px;
-// }
-// .dropdown-menu {
-//   display: none;
-// }
-// .searchBox:hover > .dropdown-menu {
-//   display: block;
-//   width: 100%;
-//   position: absolute;
-//   right: 0px;
-//   margin-top: 10px;
-// }
+.searchBox .deal-img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+}
+.deal * {
+  font-size: 12px;
+}
+#dropdown-menu {
+  display: none;
+}
+.searchBox:hover > #dropdown-menu {
+  display: block;
+  width: 100%;
+  position: absolute;
+  right: 0px;
+  margin-top: 10px;
+  overflow-y: scroll;
+}
