--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -62,7 +62,7 @@
           <tbody>
             <tr *ngFor="let p of cartService.getCart()">
               <td>{{ p.item.brand }}</td>
-              <td>{{ p.quantity }}</td>
+              <td>x 0{{ p.quantity }}</td>
               <td>{{ p.item.price + p.quantity | currency: "USD" }}</td>
             </tr>
           </tbody>
@@ -99,58 +99,80 @@
             </tr>
           </thead>
         </table>
-        <div class="custom-control custom-radio custom-control-inline">
-          <label class="custom-control-label font-weight-bold"
-            >CHECK PAYMENT</label
-          >
-          <input
-            type="radio"
-            name="customRadioInline"
-            class="custom-control-input"
-          />
-        </div>
-        <div class="bg-white p-4 mt-4">
-          <p class="text-muted p-0 m-0">
-            Please send a check to Store Name, Store Street, Store Town, Store
-            State / County, Store Postcode.
-          </p>
-        </div>
-        <div class="row mt-4">
-          <div class="col">
-            <div class="custom-control custom-radio custom-control-inline">
-              <label class="custom-control-label font-weight-bold"
-                >PAYPAL</label
-              >
+        <form [formGroup]="paymentForm" (ngSubmit)="checkout()">
+          <div class="custom-control custom-radio custom-control-inline">
+            <div class="custom-control custom-radio">
               <input
                 type="radio"
-                name="customRadioInline"
+                id="customRadio1"
+                name="paymentMethod"
                 class="custom-control-input"
+                value="CheckPayment"
+                formControlName="paymentMethod"
               />
+              <label
+                class="custom-control-label font-weight-bold"
+                for="customRadio1"
+                >CHECK PAYMENT</label
+              >
             </div>
           </div>
-          <div class="col">
-            <img src="../../../assets/img/paypal.webp" alt="" />
+          <div class="bg-white p-4 mt-4">
+            <p class="text-muted p-0 m-0">
+              Please send a check to Store Name, Store Street, Store Town, Store
+              State / County, Store Postcode.
+            </p>
           </div>
-        </div>
-        <div class="bg-white p-4 mt-4">
-          <p class="text-muted p-0 m-0">
-            Pay via PayPal; you can pay with your credit card if you don’t have
-            a PayPal account.
-          </p>
-        </div>
-        <div class="form-check mt-4">
-          <input type="checkbox" class="form-check-input" />
-          <label class="form-check-label"
-            ><p class="text-muted p-0 m-0">I’ve read and accept the</p>
-            <p class="text-danger p-0 m-0">terms & conditions*</p></label
+          <div class="row mt-4">
+            <div class="col">
+              <div class="custom-control custom-radio custom-control-inline">
+                <div class="custom-control custom-radio">
+                  <input
+                    type="radio"
+                    id="customRadio2"
+                    name="paymentMethod"
+                    class="custom-control-input"
+                    value="paypal"
+                    formControlName="paymentMethod"
+                    checked
+                  />
+                  <label
+                    class="custom-control-label font-weight-bold"
+                    for="customRadio2"
+                    >PAYPAL</label
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <img src="../../../assets/img/paypal.webp" alt="" />
+            </div>
+          </div>
+          <div class="bg-white p-4 mt-4">
+            <p class="text-muted p-0 m-0">
+              Pay via PayPal; you can pay with your credit card if you don’t
+              have a PayPal account.
+            </p>
+          </div>
+          <div class="form-check mt-4">
+            <input
+              type="checkbox"
+              class="form-check-input"
+              formControlName="acceptConditions"
+              (blur)="log()"
+            />
+            <label class="form-check-label"
+              ><p class="text-muted p-0 m-0">I’ve read and accept the</p>
+              <p class="text-danger p-0 m-0">terms & conditions*</p></label
+            >
+          </div>
+          <button
+            class="bg-primary gradient w-100 border-0 rounded mt-4 py-2 text-white font-weight-bold"
+            [disabled]="!acceptConditions.value"
           >
-        </div>
-        <button
-          class="bg-primary gradient w-100 border-0 rounded mt-4 py-2 text-white font-weight-bold"
-          (click)="pay()"
-        >
-          PROCEED TO PAYPAL
-        </button>
+            PROCEED TO PAYPAL
+          </button>
+        </form>
       </div>
     </div>
   </div>
