--- a/src/app/components/shopping-cart/shopping-cart.component.scss
+++ b/src/app/components/shopping-cart/shopping-cart.component.scss
@@ -1,5 +1,5 @@
 img {
-  max-width: 200px;
+  max-width: 100%;
   object-fit: cover;
 }
 .shoppping-cart {
@@ -40,4 +40,3 @@ img {
 #add-product button:hover {
   background-color: rgb(228, 217, 217);
 }
-
