--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -3,6 +3,16 @@
   <ngb-carousel *ngIf="images">
     <ng-template ngbSlide>
       <div class="picsum-img-wrapper">
+        <img src="../../../../assets/img/slide4.webp" id="img-slide" />
+      </div>
+    </ng-template>
+    <ng-template ngbSlide>
+      <div class="picsum-img-wrapper">
+        <img src="../../../../assets/img/slide3.webp" id="img-slide" />
+      </div>
+    </ng-template>
+    <ng-template ngbSlide>
+      <div class="picsum-img-wrapper">
         <video
           id="img-slide"
           loop=""
@@ -19,12 +29,8 @@
     </ng-template>
     <ng-template ngbSlide>
       <div class="picsum-img-wrapper">
-        <img src="../../../../assets/img/slide3.webp" id="img-slide" />
-      </div>
-    </ng-template>
-    <ng-template ngbSlide>
-      <div class="picsum-img-wrapper" id="img-slide">
         <video
+          id="img-slide"
           autoplay=""
           loop=""
           playsinline=""
@@ -38,7 +44,6 @@
             src="https://video.hsv-tech.io/reebok/common/7294ea91-2942-48a0-95a4-ca364919c122.mp4"
           />
         </video>
-        >>>>>>> 51ce17d07d4491786f111cc62163620936df5af2
       </div>
     </ng-template>
   </ngb-carousel>
@@ -46,22 +51,22 @@
 <div class="container-xl">
   <!-- layout2 -->
   <div class="row mx-auto text-center margin-100">
-    <div class="col-3">
+    <div class="col-md-3 col-6 my-md-0 my-3">
       <p><i class="fas fa-truck"></i></p>
       <h5>Free Delivery</h5>
       <p>Free ship on all order</p>
     </div>
-    <div class="col-3">
+    <div class="col-md-3 col-6 my-md-0 my-3">
       <p><i class="fas fa-sync"></i></p>
       <h5>Return Policy</h5>
       <p>Free ship on all order</p>
     </div>
-    <div class="col-3">
+    <div class="col-md-3 col-6 my-md-0 my-3">
       <p><i class="fas fa-headset"></i></p>
       <h5>24/7 Support</h5>
       <p>Free ship on all order</p>
     </div>
-    <div class="col-3">
+    <div class="col-md-3 col-6 my-md-0 my-3">
       <p><i class="fas fa-database"></i></p>
       <h5>Secure Payment</h5>
       <p>Free ship on all order</p>
@@ -69,30 +74,25 @@
   </div>
   <!-- deals -->
   <div class="row flash-sale margin-100">
-    <div class="col-9">
+    <div class="col-md-9 col-12">
       <div class="row">
-        <div class="col-9 single-deal">
+        <div class="col-md-9 col-12">
           <img src="../../../../assets/img/layout-3-img1.webp" alt="" />
-          <a href="">
-            <div class="deal-details">
-              <h6 class="deal-title">Sneaks forsports</h6>
-            </div>
-          </a>
         </div>
-        <div class="col-3">
+        <div class="col-md-3 d-md-block d-none">
           <img src="../../../../assets/img/layout-3-img-2.webp" alt="" />
         </div>
       </div>
       <div class="row mt-3">
-        <div class="col-3">
+        <div class="col-md-3 d-md-block d-none">
           <img src="../../../../assets/img/layout-3-img-3.webp" alt="" />
         </div>
-        <div class="col-9">
+        <div class="col-md-9 col-12">
           <img src="../../../../assets/img/layout-3-img-4.webp" alt="" />
         </div>
       </div>
     </div>
-    <div class="col-3">
+    <div class="col-md-3 d-md-block d-none">
       <img src="../../../../assets/img/layout-3-img-5.webp" alt="" />
     </div>
   </div>
