--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,7 +15,7 @@
     </div>
   </div>
   <div class="col d-flex align-items-center px-3 shadow justify-content-center">
-    <div class="w-100">
+    <div class="w-100 mt-5">
       <h5 class="mb-4 text-center col-12">
         {{ "Log in to enter" | uppercase }}
       </h5>
