--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -138,3 +138,14 @@ li a {
   margin-top: 10px;
   overflow-y: scroll;
 }
+.cart1 {
+  display: none;
+}
+@media only screen and (max-width: 768px) {
+  .cart {
+    display: none;
+  }
+  .cart1 {
+    display: block;
+  }
+}
