--- a/src/app/components/product-detail/product-detail.component.scss
+++ b/src/app/components/product-detail/product-detail.component.scss
@@ -25,3 +25,17 @@
   border-radius: 5px;
   padding: 3px;
 }
+@media screen and (max-width: 576px) {
+  #img-item {
+    width: 40px;
+    height: 20px;
+    object-fit: contain;
+  }
+}
+@media screen and (max-width: 992px) {
+  #img-item {
+    width: 70px;
+    height: 40px;
+    object-fit: contain;
+  }
+}
