--- a/src/app/components/shoes-container/shoe-preview/shoe-preview.component.html
+++ b/src/app/components/shoes-container/shoe-preview/shoe-preview.component.html
@@ -1,6 +1,6 @@
 <div class="px-4 shadow1 singerProduct mt-5">
   <div class="d-flex align-items-center" style="height: 250px">
-    <div>
+    <div routerLink="/productDetail/{{ item['id'] }}">
       <img [src]="item.images_list[0]" alt="" class="imgproduct" />
     </div>
   </div>
@@ -19,7 +19,7 @@
   </div>
 
   <div class="row my-4">
-    <div class="col">
+    <div class="col-8">
       <div
         id="icon-product"
         (click)="cartService.addItem(item)"
@@ -50,7 +50,7 @@
         </div>
       </ng-template>
     </div>
-    <div class="col">
+    <div class="col-4">
       <div id="icon-product" class="float-right">
         <i
           class="fas fa-info mx-2"
