--- a/src/app/components/shoes-container/shoes-container.component.html
+++ b/src/app/components/shoes-container/shoes-container.component.html
@@ -2,21 +2,21 @@
   <div class="head-product">
     <div class="row">
       <div class="col-4">
-        <img
+        <!-- <img
           src="../../../../assets/img/prev.png.webp"
           alt=""
           class="float-right btn-prev"
-        />
+        /> -->
       </div>
       <div class="col-4 text-center">
         <h3 class="text-capitalize">latest products</h3>
       </div>
       <div class="col-4">
-        <img
+        <!-- <img
           src="../../../../assets/img/next.png.webp"
           alt=""
           class="btn-prev"
-        />
+        /> -->
       </div>
     </div>
     <p class="text-center w-50 mx-auto my-4">
@@ -26,7 +26,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-3 mb-2" *ngFor="let item of products">
+  <div class="col-lg-3 mb-2 col-md-4 col-6" *ngFor="let item of products">
     <app-shoe-preview [numberCharater]="40" [product]="item"></app-shoe-preview>
   </div>
 </div>
