--- a/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/components/shopping-cart/shopping-cart.component.html
@@ -1,84 +1,74 @@
 <div class="container-xl" *ngIf="cartService.getCart().length">
   <div class="row">
-    <div class="col-8 py-4 pr-5 shoppping-cart">
-      <table class="table table-borderless">
-        <thead>
-          <tr class="border-bottom">
-            <th scope="col"><h2 class="font-weight-bolder">Cart</h2></th>
-            <th scope="col"></th>
-            <th scope="col">Total</th>
-            <th scope="col"></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let item of cartService.getCart()">
-            <td>
-              <div class="row align-items-center">
-                <div class="col-4 pl-2">
-                  <img [src]="item.item.images_list[0]" />
-                </div>
-                <div class="col-8">
-                  <h6>{{ item.item.title | titlecase }}</h6>
-                  <p class="font-weight-bold">
-                    {{ item.item.price | currency: "USD" }}
-                  </p>
-                </div>
-              </div>
-            </td>
-            <td>
-              <div style="width: 120px">
-                <div
-                  class="border rounded"
-                  style="font-size: 15px"
-                  id="add-product"
-                >
-                  <button
-                    (click)="cartService.remove(item.item)"
-                    class="btn border-right px-2"
-                  >
-                    -
-                  </button>
-                  <input
-                    type="text"
-                    [value]="cartService.getQuantityItem(item.item.id)"
-                    class="input border-0"
-                  />
-                  <button
-                    (click)="cartService.addItem(item.item)"
-                    class="btn border-left px-2"
-                  >
-                    +
-                  </button>
-                </div>
-              </div>
-            </td>
-            <td>
-              <span class="font-weight-bold">{{
-                item.item.price * item.quantity | currency: "USD"
-              }}</span>
-            </td>
-            <td>
-              <i
-                class="fas fa-times"
-                style="font-size: 24px"
-                (click)="cartService.deleteItem(item)"
-              ></i>
-            </td>
-          </tr>
-          <tr class="border-top">
-            <h5
-              class="text-muted mt-4"
-              style="font-size: 18px; cursor: pointer"
-              routerLink="/categories"
+    <div class="col-lg-8 col-12 py-4 pr-5 shoppping-cart">
+      <div class="row border-bottom">
+        <div class="col"><h2 class="font-weight-bolder">Cart</h2></div>
+        <div class="col-2">
+          <p class="float-right mb-0 mt-4 font-weight-bolder">Total</p>
+        </div>
+        <div class="col-1"></div>
+      </div>
+      <div class="row mt-5" *ngFor="let item of cartService.getCart()">
+        <div class="col-md-7 col-12 align-items-center">
+          <div class="row">
+            <div class="col-4 pl-2">
+              <img [src]="item.item.images_list[0]" />
+            </div>
+            <div class="col-8">
+              <h6>{{ item.item.title | titlecase }}</h6>
+              <p class="font-weight-bold">
+                {{ item.item.price | currency: "USD" }}
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2 col-3 align-items-center">
+          <div
+            class="border rounded mt-5"
+            style="font-size: 15px"
+            id="add-product"
+          >
+            <button
+              (click)="cartService.remove(item.item)"
+              class="btn border-right px-2"
             >
-              CONTINUE SHOPPING
-            </h5>
-          </tr>
-        </tbody>
-      </table>
+              -
+            </button>
+            <input
+              type="text"
+              [value]="cartService.getQuantityItem(item.item.id)"
+              class="input border-0"
+            />
+            <button
+              (click)="cartService.addItem(item.item)"
+              class="btn border-left px-2"
+            >
+              +
+            </button>
+          </div>
+        </div>
+        <div class="col-md-2 col-2 align-items-center">
+          <p class="font-weight-bold mt-5">
+            {{ item.item.price * item.quantity | currency: "USD" }}
+          </p>
+        </div>
+        <div class="col-md-1 col-2 align-items-center">
+          <i
+            class="fas fa-times mt-5"
+            style="font-size: 24px"
+            (click)="cartService.deleteItem(item)"
+          ></i>
+        </div>
+      </div>
+      <button class="btn btn-primary mt-5 rounded" routerLink="/categories">
+        Continue Shopping
+      </button>
     </div>
-    <div class="col-4 bg-light p-5 sumary">
-      <h4 class="font-weight-bold">Order Sumary</h4>
+    <div
+      class="col-lg-4 col-12 bg-light p-5 sumary"
+      style="height: fit-content"
+    >
+      <h4 class="font-weight-bold">Order Summary</h4>
       <table class="table table-borderless w-100 mt-4">
         <tbody>
           <tr>
@@ -107,7 +97,7 @@
         </tbody>
       </table>
       <button
-        class="bg-primary gradient px-4 py-2 border-0 text-white w-100"
+        class="bg-primary gradient px-4 py-2 border-0 text-white w-100 rounded"
         routerLink="/checkout"
       >
         PROCESS TO CHECKOUT
@@ -125,7 +115,7 @@
 >
   <img src="../../../assets/img/noProductInCart.png" alt="" class="mt-5" />
   <p class="my-4">No product in my cart</p>
-  <button class="btn btn-primary" routerLink="/categories">
+  <button class="btn btn-primary rounded" routerLink="/categories">
     Continue Shopping
   </button>
 </div>
