--- a/src/app/components/shoe-category/shoe-category.component.html
+++ b/src/app/components/shoe-category/shoe-category.component.html
@@ -21,7 +21,7 @@
       </div>
     </div>
   </div>
-  <div class="col-xl-9 col-12 pl-5">
+  <div class="col-xl-9 col-12 pl-md-5">
     <!-- nav-catagory -->
     <div class="row p-2 align-items-center" id="nav-category">
       <div class="col-12 col-md-4">
