--- a/src/app/components/sigup/sigup.component.html
+++ b/src/app/components/sigup/sigup.component.html
@@ -1,4 +1,6 @@
-<div class="jumbotron template-driven text-center w-50 my-5 mx-auto border p-5">
+<div
+  class="jumbotron template-driven text-center w-md-50 w-100 my-5 mx-auto border p-5"
+>
   <h3>Sigup</h3>
   <hr />
   <form [formGroup]="createAccount">
