--- a/src/app/components/deal-week/deal-week.component.html
+++ b/src/app/components/deal-week/deal-week.component.html
@@ -1,10 +1,7 @@
 <div class="my-50">
-  <div class="w-75 text-center mx-auto my-5">
-    <h5>Deals of the week</h5>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua.
-    </p>
+  <div class="w-md-75 w-100 px-md-0 px-3 text-center mx-auto my-5">
+    <h5 class="text-uppercase font-weight-bold">best sellers</h5>
+    <p>Versatile sportswear. The Naomi Osaka Capsule Collection</p>
   </div>
 
   <div class="row deal">
@@ -12,10 +9,10 @@
       <div class="row">
         <div class="col-4 my-3" *ngFor="let item of productDeal">
           <div
-            class="row d-flex justify-content-center"
+            class="row d-flex flex-md-row flex-column"
             routerLink="/productDetail/{{ item['id'] }}"
           >
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-6 mb-auto">
               <img class="deal-img" [src]="item.images_list[0]" alt="" />
             </div>
             <div class="col-8">
