--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,7 @@
 <div class="row login mx-auto m-50 my-50">
-  <div class="col signin-container d-flex align-items-center">
+  <div
+    class="col-md-6 col-12 order-md-1 order-2 signin-container d-flex align-items-center"
+  >
     <div class="container mx-auto text-center text-white sign-in">
       <h3>New to our website?</h3>
       <p>
@@ -14,7 +16,9 @@
       </button>
     </div>
   </div>
-  <div class="col d-flex align-items-center px-3 shadow justify-content-center">
+  <div
+    class="col-md-6 col-12 order-md-2 order-1 d-flex align-items-center px-3 pb-3 shadow justify-content-center"
+  >
     <div class="w-100 mt-5">
       <h5 class="mb-4 text-center col-12">
         {{ "Log in to enter" | uppercase }}
