--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -19,8 +19,12 @@
         [ngClass]="{ show: checkNav }"
       >
         <ul class="navbar-nav ml-auto align-items-lg-center align-items-end">
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/home" routerLinkActive="active"
+          <li class="nav-item" (click)="iconNavClick()">
+            <a
+              class="nav-link"
+              routerLink="/home"
+              routerLinkActive="active"
+              (click)="iconNavClick()"
               >Home</a
             >
           </li>
@@ -29,18 +33,33 @@
               >Shop</a
             >
             <div ngbDropdownMenu id="drop-down" class="shadow">
-              <button ngbDropdownItem class="py-2" routerLink="/categories">
+              <button
+                ngbDropdownItem
+                class="py-2"
+                routerLink="/categories"
+                (click)="iconNavClick()"
+              >
                 Shop Category
               </button>
-              <button ngbDropdownItem class="py-2" routerLink="/checkout">
+              <button
+                ngbDropdownItem
+                class="py-2"
+                routerLink="/checkout"
+                (click)="iconNavClick()"
+              >
                 Product checkout
               </button>
-              <button ngbDropdownItem class="py-2" routerLink="/tracking">
+              <button
+                ngbDropdownItem
+                class="py-2"
+                routerLink="/tracking"
+                (click)="iconNavClick()"
+              >
                 Tracking order
               </button>
             </div>
           </li>
-          <li class="nav-item" routerLink="/contact">
+          <li class="nav-item" routerLink="/contact" (click)="iconNavClick()">
             <a class="nav-link">contact</a>
           </li>
           <li class="nav-item">
@@ -58,10 +77,20 @@
                   ><i class="fas fa-user"></i
                 ></a>
                 <div ngbDropdownMenu id="drop-down" class="shadow">
-                  <button ngbDropdownItem class="py-2" (click)="onLogout()">
+                  <button
+                    ngbDropdownItem
+                    class="py-2"
+                    (click)="onLogout()"
+                    (click)="iconNavClick()"
+                  >
                     Logout
                   </button>
-                  <button ngbDropdownItem class="py-2" (click)="onLogout()">
+                  <button
+                    ngbDropdownItem
+                    class="py-2"
+                    (click)="onLogout()"
+                    (click)="iconNavClick()"
+                  >
                     My Profile
                   </button>
                 </div>
@@ -69,7 +98,7 @@
             </ng-template>
           </li>
           <!-- cart -->
-          <li class="nav-item">
+          <li class="nav-item" (click)="iconNavClick()">
             <span
               class="nav-link cart"
               routerLink="shopping-cart"
