--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -141,11 +141,17 @@ li a {
 .cart1 {
   display: none;
 }
+
 @media only screen and (max-width: 768px) {
   .cart {
     display: none;
   }
   .cart1 {
     display: block;
+  }
+  .navbar-nav {
+    flex-direction: row;
+    justify-content: end;
+    gap: 10px;
   }
 }
