--- a/src/app/components/shoes-container/shoes-container.component.html
+++ b/src/app/components/shoes-container/shoes-container.component.html
@@ -1,17 +1,17 @@
 <div class="product">
   <div class="head-product">
     <div class="row">
-      <div class="col-4">
+      <div class="col-md-4 col-0">
         <!-- <img
           src="../../../../assets/img/prev.png.webp"
           alt=""
           class="float-right btn-prev"
         /> -->
       </div>
-      <div class="col-4 text-center">
-        <h3 class="text-capitalize">latest products</h3>
+      <div class="col-md-4 col-12 text-center">
+        <h3 class="text-uppercase font-weight-bold">deal of the week</h3>
       </div>
-      <div class="col-4">
+      <div class="col-md-4 col-0">
         <!-- <img
           src="../../../../assets/img/next.png.webp"
           alt=""
@@ -19,9 +19,9 @@
         /> -->
       </div>
     </div>
-    <p class="text-center w-50 mx-auto my-4">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua.
+    <p class="text-center w-md-50 w-100 px-md-0 px-3 mx-auto my-4">
+      Play. Let loose. Repeat. This season, turn it up in styles made for living
+      life to the max.
     </p>
   </div>
 </div>
