--- a/src/app/components/tracking/tracking.component.html
+++ b/src/app/components/tracking/tracking.component.html
@@ -1,4 +1,4 @@
-<div class="w-75 mt-3">
+<div class="w-75 mt-5 container tracking">
   <p class="mb-4 font-weight-bold">
     To track your order please enter your Order ID in the box below and press
     the "Track" button. This was given to you on your receipt and in the
