--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -85,14 +85,15 @@
                   >
                     Logout
                   </button>
-                  <button
+                  <!-- <button
                     ngbDropdownItem
                     class="py-2"
                     (click)="onLogout()"
                     (click)="iconNavClick()"
                   >
                     My Profile
-                  </button>
+                    
+                  </button> -->
                 </div>
               </div>
             </ng-template>
