--- a/src/app/components/shoe-category/shoe-category.component.html
+++ b/src/app/components/shoe-category/shoe-category.component.html
@@ -49,7 +49,7 @@
     </div>
     <!-- show product -->
     <div class="row">
-      <div class="col-lg-4 col-6" *ngFor="let item of products">
+      <div class="col-lg-4 col-sm-6 col-12" *ngFor="let item of products">
         <app-shoe-preview
           [numberCharater]="40"
           [product]="item"
